--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "google-auth-library": "^9.15.0",
     "mqtt": "^5.10.3",
     "reflect-metadata": "^0.2.2",
+    "sinricpro": "^2.12.1",
     "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "nodemon": "^3.1.7",
